@@ -20,10 +20,13 @@ package org.apache.mahout.text;
 import java.io.IOException;
 
 import com.google.common.io.Closeables;
+import org.apache.commons.lang3.StringUtils;
 import org.apache.hadoop.conf.Configuration;
 import org.apache.hadoop.fs.FSDataInputStream;
+import org.apache.hadoop.fs.FileStatus;
 import org.apache.hadoop.fs.FileSystem;
 import org.apache.hadoop.fs.Path;
+import org.apache.hadoop.fs.PathFilter;
 import org.apache.hadoop.io.BytesWritable;
 import org.apache.hadoop.io.IOUtils;
 import org.apache.hadoop.io.IntWritable;
@@ -32,6 +35,8 @@ import org.apache.hadoop.mapreduce.RecordReader;
 import org.apache.hadoop.mapreduce.TaskAttemptContext;
 import org.apache.hadoop.mapreduce.lib.input.CombineFileSplit;
 import org.apache.hadoop.mapreduce.lib.input.FileSplit;
+
+import static org.apache.mahout.text.SequenceFilesFromDirectory.FILE_FILTER_CLASS_OPTION;
 
 /**
  * RecordReader used with the MultipleTextFileInputFormat class to read full files as
@@ -44,13 +49,16 @@ public class WholeFileRecordReader extends RecordReader<IntWritable, BytesWritab
   private Configuration configuration;
   private BytesWritable value = new BytesWritable();
   private IntWritable index;
+  private String fileFilterClassName = null;
+  private PathFilter pathFilter = null;
 
   public WholeFileRecordReader(CombineFileSplit fileSplit, TaskAttemptContext taskAttemptContext, Integer idx)
-    throws IOException {
+      throws IOException {
     this.fileSplit = new FileSplit(fileSplit.getPath(idx), fileSplit.getOffset(idx),
-       fileSplit.getLength(idx), fileSplit.getLocations());
+      fileSplit.getLength(idx), fileSplit.getLocations());
     this.configuration = taskAttemptContext.getConfiguration();
     this.index = new IntWritable(idx);
+    this.fileFilterClassName = this.configuration.get(FILE_FILTER_CLASS_OPTION[0]);
   }
 
   @Override
@@ -71,7 +79,17 @@ public class WholeFileRecordReader extends RecordReader<IntWritable, BytesWritab
   @Override
   public void initialize(InputSplit inputSplit, TaskAttemptContext taskAttemptContext)
     throws IOException, InterruptedException {
-
+    if (!StringUtils.isBlank(fileFilterClassName) && !PrefixAdditionFilter.class.getName().equals(fileFilterClassName)) {
+      try {
+        pathFilter = (PathFilter) Class.forName(fileFilterClassName).newInstance();
+      } catch (ClassNotFoundException e) {
+        throw new IllegalStateException(e);
+      } catch (InstantiationException e) {
+        throw new IllegalStateException(e);
+      } catch (IllegalAccessException e) {
+        throw new IllegalStateException(e);
+      }
+    }
   }
 
   @Override
@@ -80,20 +98,31 @@ public class WholeFileRecordReader extends RecordReader<IntWritable, BytesWritab
       byte[] contents = new byte[(int) fileSplit.getLength()];
       Path file = fileSplit.getPath();
       FileSystem fs = file.getFileSystem(this.configuration);
-      FSDataInputStream in = null;
-      try {
-        if (!fs.isFile(file)) {
-          return false;
-        }
-        in = fs.open(file);
-        IOUtils.readFully(in, contents, 0, contents.length);
-        value.setCapacity(contents.length);
-        value.set(contents, 0, contents.length);
-      } finally {
-        Closeables.close(in, false);
+
+      if (!fs.isFile(file)) {
+        return false;
       }
-      processed = true;
-      return true;
+
+      FileStatus[] fileStatuses;
+      if (pathFilter != null) {
+        fileStatuses = fs.listStatus(file, pathFilter);
+      } else {
+        fileStatuses = fs.listStatus(file);
+      }
+
+      FSDataInputStream in = null;
+      if (fileStatuses.length == 1) {
+        try {
+          in = fs.open(fileStatuses[0].getPath());
+          IOUtils.readFully(in, contents, 0, contents.length);
+          value.setCapacity(contents.length);
+          value.set(contents, 0, contents.length);
+        } finally {
+          Closeables.close(in, false);
+        }
+        processed = true;
+        return true;
+      }
     }
     return false;
   }
